Fixed sessions alignment, add uptime loading wheel
Fixed alignment for menu items in Active Sessions menu.
Added loading wheel to Uptime on view specific host page, as uptime is
pulled after the page fully loads.

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -10,24 +10,37 @@ code {
 .pre-scrollable {  /* Overrides bootstrap settings for pre-scrollable */
     max-height: 100vh;
 }
-#inlineSSHLine {
-    padding-bottom: 5px;
-    padding-top: 5px;
+.inlineSSHLine {
+    width: 30ch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;"
+    display: inline!important;
+    padding-top: 6px;
     padding-right:10px;
+    padding-left: 10px;
 }
-#inlineBtnText {
-    display:inline;
-    padding-top: 3px;
+.inlineSSHLine:focus, .inlineSSHLine:hover {
+    color: #262626;
+    text-decoration: none;
+    background-color: #f5f5f5;
+}
+.inlineBtnText {
+    width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;"
+    display: inline!important;
     padding-right: 5px;
     padding-bottom: 3px;
     padding-left: 10px;
+    color: #333;
+    text-decoration: none;
 }
-#inlineBtnIcon {
-    display:inline;
-    padding-top: 3px;
-    padding-right: 5px;
-    padding-bottom: 3px;
-    padding-left: 5px;
+.inlineBtnText:focus, .inlineBtnText:hover {
+    color: #262626;
+    background-color: #f5f5f5;
+    text-decoration: none;
 }
 #loading {
   display: none;
